log/build_2024-01-23_12-25-23/robu/stderr.log
  File "/home/robu/work/robu_jamben19_ws/install/robu/lib/python3.10/site-packages/robu/ex11_parameter.py", line 9
    namespace=''
              ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

